# cmake_exercise

./: .gitignore  CMakeLists.txt  README.md  main.cc
inc/: Blah.hh  bar.hh  foo.hh
release/: condWithPoly
src/: Blah.cc  bar.cc  foo.cc
